@@ -1,5 +1,5 @@
 module github.com/kardianos/service
 
-go 1.10
+go 1.12
 
 require golang.org/x/sys v0.0.0-20190204203706-41f3e6584952
